--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.appspot.roovemore.slim3.modelcache</groupId>
   <artifactId>roovemore-slim3-modelcache</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>2.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>roovemore-slim3-modelcache</name>
@@ -19,7 +19,92 @@
     <!-- add start2 -->
 	<slim3.version>1.0.17-SNAPSHOT</slim3.version>
 	<!-- add end2 -->
-    </properties>
+	<!-- add start3 githubリポジトリに公開したい場合の設定-->
+	<github.global.server>github</github.global.server>
+
+
+	<!-- add end3 -->
+  </properties>
+
+<!--
+<distributionManagement>
+  <repository>
+    <id>github</id>
+    <name>GitHub ${project.artifactId} Repository</name>
+    <url>https://github.com/roovesmart/${project.artifactId}/mvn-repo</url>
+  </repository>
+</distributionManagement>
+-->
+<!--
+    <distributionManagement>
+        <repository>
+            <id>internal.repos</id>
+            <name>Temporary Staging Repository</name>
+            <url>file://${project.build.directory}/mvn-repo</url>
+        </repository>
+    </distributionManagement>
+ -->
+
+<build>
+  <plugins>
+
+    <!-- maven-deploy-pluginについては設定値をカスタマイズしなければ不要-->
+    <!-- altDeploymentRepositoryについてはデプロイする成果物を配置する 以下file://なので以下ローカル環境に配備-->
+    <!-- [INFO] Using alternate deployment repository internal.repo::default::file://C:\develop\workspace\roovemore-slim3-modelcache\target/mvn-repo  -->
+    <!-- altDeploymentRepositoryを指定していれば、distributionManagementは不要でmvn deployでエラーは発生しなかった -->
+    <plugin>
+      <artifactId>maven-deploy-plugin</artifactId>
+      <version>2.7</version>
+      <configuration>
+		<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+      </configuration>
+    </plugin>
+
+    <plugin>
+      <groupId>com.github.github</groupId>
+      <artifactId>site-maven-plugin</artifactId>
+      <version>0.10</version>
+      <configuration>
+        <!-- settings.xmlのserverに事前にユーザ情報を設定しidはgithubとする -->
+        <server>github</server>
+        <message>Test11 Maven artifacts for ${project.version}</message>
+        <noJekyll>true</noJekyll>
+
+        <!-- 事前に成果物をデプロイした場所から吸い上げ、github側に反映するイメージ -->
+        <!-- 基本的にはmaven-deploy-plugin or distributionManagement にて配備したディレクトリと合わせる -->
+        <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+
+        <!-- この場合ブランチ名は、mvn-repo。もしgit上でこのブランチがなくてもエラーとならず、このブランチを生成してくれる -->
+        <branch>refs/heads/mvn-repo</branch>
+        <includes><include>**/*</include></includes>
+
+        <!-- 最終的に他プロジェクトでdependencyする際は repositoryName、repositoryOwnerを組立URLとしている？-->
+        <repositoryName>${project.artifactId}</repositoryName>
+        <!-- 存在しないリポジトリだとエラーと、空プロジェクトでもエラー -->
+        <!-- 存在しないリポジトリ -->
+        <!-- [ERROR] Failed to execute goal com.github.github:site-maven-plugin:0.10:site (default) on project roovemore-slim3-modelcache: Error creating blob: Not Found (404) -> [Help 1] -->
+        <!-- 空プロジェクト -->
+        <!-- [ERROR] Failed to execute goal com.github.github:site-maven-plugin:0.10:site (default) on project roovemore-slim3-modelcache: Error creating blob: Git Repository is empty. (409) -> [Help 1] -->
+        <!--
+        <repositoryName>AAA</repositoryName>
+		 -->
+
+        <repositoryOwner>roovesmart</repositoryOwner>
+      </configuration>
+      <executions>
+        <execution>
+          <goals>
+            <goal>site</goal>
+          </goals>
+          <phase>deploy</phase>
+        </execution>
+      </executions>
+    </plugin>
+
+
+  </plugins>
+</build>
+
 
   <dependencies>
     <dependency>
